fix(ClubCard): fix responsive & tabs z-index

--- a/apps/site/src/assets/scss/components/container.scss
+++ b/apps/site/src/assets/scss/components/container.scss
@@ -1,7 +1,7 @@
 .centered-container {
-    @apply w-full max-w-[90rem] md:gap-8 md:mx-auto md:px-8 gap-4 md:my-8;
+    @apply w-full max-w-[90rem] md:gap-8 md:mx-auto md:p-8 gap-4;
 
     &-padded {
-        @apply px-4 w-full max-w-[90rem] md:gap-8 md:mx-auto md:px-8 gap-4 my-4 md:my-8;
+        @apply p-4 w-full max-w-[90rem] md:gap-8 md:mx-auto gap-4 md:p-8;
     }
 }
